# bluetooth-car-control

./: CMakeLists.txt  README.md  build.sh
include/: mainwindow.h
src/: mainwindow.cpp
